Don't set the last page visited pref if unneeded (privacy). Don't fetch a new prefservice every pageload. Disable navigator pref buttons that do nothing.

Bug 114782
r=alecf sr=blake